--- a/apache2.conf
+++ b/apache2.conf
@@ -2,9 +2,9 @@
     ServerName logindemo.local
     ServerAlias logindemo.local
     DocumentRoot /var/www/html/code-challenge/web/
-    ErrorLog /var/log/logindemoerror.log
+    ErrorLog /var/log/apache2/logindemoerror.log
     CustomLog /var/log/apache2/logindemoaccess.log combined
     
-    SetEnv db_username root
-    SetEnv db_password root
+    SetEnv db_username dbuser
+    SetEnv db_password dbpassword
 </VirtualHost>
